# Chat

./: CMakeLists.txt
ChatBinary/: CMakeLists.txt  main.cpp
ChatClient/: CMakeLists.txt  main.cpp
ChatNetworking/: CMakeLists.txt
ChatNetworking/include/ChatNetworking/client/: tcp_client.h
ChatNetworking/include/ChatNetworking/server/: tcp_connection.h  tcp_server.h
ChatNetworking/src/client/: tcp_client.cpp
ChatNetworking/src/server/: tcp_connection.cpp  tcp_server.cpp
ChatServer/: CMakeLists.txt  main.cpp
